--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,33 +20,34 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE
       - uses: actions/checkout@v3
 
-      # Setup Python 3.12.7
       - name: Set up Python 3.12.7
         uses: actions/setup-python@v4
         with:
           python-version: "3.12.7"
-      
-      # Check Env Variables
+
       - name: Check Env
         run: |
           echo $CSV_URL
-      # Install mlflow
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install mlflow
-      
-      # Run as a mlflow project
+
       - name: Run mlflow project
         run: |
-          mlflow run Project --env-manager=local 
+          # Ganti Project dengan . jika Project tidak ada
+          mlflow run . --env-manager=local 
+
       - name: Save mlruns to repo
         run: |
-          git config --global user.name ${{ secrets.username }}
-          git config --global user.email ${{ secrets.email }}
+          git config --global user.name "${{ secrets.GIT_USER_NAME }}"
+          git config --global user.email "${{ secrets.GIT_USER_EMAIL }}"
           git add mlruns/
-          git commit -m "Save mlruns from CI run"
-          git push origin master
+          git commit -m "Save mlruns from CI run" || echo "No changes to commit"
+          git push origin main
+        env:
+          GIT_USER_NAME: ${{ secrets.GIT_USER_NAME }}
+          GIT_USER_EMAIL: ${{ secrets.GIT_USER_EMAIL }}
