--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,17 +33,17 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
+          python -m pip install-- upgrade pip
           pip install mlflow
 
-      - name: Run mlflow project
+      - name: Run MLflow project
         run: |
-          mlflow run . --env-manager=local  
+          mlflow run. --env-manager=local  
 
-      - name: Save mlruns to repo
+      - name: Save MLruns to repo
         run: |
-          git config --global user.name "${{ secrets.GIT_USER_NAME }}"
-          git config --global user.email "${{ secrets.GIT_USER_EMAIL }}"
+          git config-- global user.name "${{ secrets.GIT_USER_NAME }}"
+          git config-- global user.email "${{ secrets.GIT_USER_EMAIL }}"
           git add mlruns/
           git commit -m "Save mlruns from CI run" || echo "No changes to commit"
           git push origin main
